# semgrasp

nlp_intent/: debug_ollama.py  package.xml  setup.cfg  setup.py
nlp_intent/nlp_intent/: intent_node.py  ollama_client.py  turtle_controller.py
vlm_perception/: package.xml  setup.cfg  setup.py
vlm_perception/vlm_perception/: perception_node.py
